# GWEngine

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakePresets.json  HL2Engine.vcxproj  HL2Engine.vcxproj.filters  HL2StyleEngine.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  {2f1db13a-aeb5-40cf-be80-b1ed5d26ff70}.cdwzrd  {f51b8e65-9c22-464c-bba9-78b9206af6d0}.cdwzrd
Engine/: main.cpp
Engine/Core/: Application.cpp  Application.h  Editor.cpp  Editor.h  EditorAssetsManager.cpp  EditorAssetsManager.h  EditorFolderModal.cpp  EditorFolderModal.h  EditorPanels.cpp  EditorPanels.h  Logger.h  MathHelpers.h  Play.cpp  Play.h  Ray.h  Runtime.h  Transform.h  stb_impl.cpp  stb_impl.h
Engine/Renderer/: Camera.cpp  Camera.h  IRenderer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RendererDX9.cpp  RendererDX9.h  RendererGL21.cpp  RendererGL21.h  RendererManager.cpp  RendererManager.h
Engine/SkyboxMaker_Python/: CubeMapMaker.py
